Fix spacing around header

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -292,7 +292,7 @@ footer.footer a
     max-width: 70%;
     margin: 0 0 1em;
   .header-logo-banner
-    width: auto;
+    width: 100%;
     display: block;
   .header-logo
     display: none !important
@@ -303,6 +303,8 @@ footer.footer a
   .main-page-columns
     display: flex
     flex-direction: column-reverse
+  .section
+    padding: 0.5em
 
 .mobile-navbar
   position: fixed
